// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`print sitemap 1`] = `
Object {
  "https://my-super-cool-domain.com/pageA": Array [
    Object {
      "links": Array [
        Object {
          "labels": Array [
            "Page B",
          ],
          "links": Array [
            Object {
              "labels": Array [
                "Page E",
              ],
              "links": Array [
                Object {
                  "labels": Array [
                    "Page G",
                  ],
                  "links": Array [
                    Object {
                      "labels": Array [
                        "Page X",
                      ],
                      "links": Array [],
                      "parent": "https://my-super-cool-domain.com/pageG",
                      "url": "https://my-super-cool-domain.com/pageX",
                    },
                  ],
                  "parent": "https://my-super-cool-domain.com/pageE",
                  "url": "https://my-super-cool-domain.com/pageG",
                },
              ],
              "parent": "https://my-super-cool-domain.com/pageB",
              "url": "https://my-super-cool-domain.com/pageE",
            },
          ],
          "parent": "https://my-super-cool-domain.com/pageA",
          "url": "https://my-super-cool-domain.com/pageB",
        },
        Object {
          "labels": Array [
            "Page C",
          ],
          "links": Array [
            Object {
              "labels": Array [
                "Page F",
              ],
              "links": Array [],
              "parent": "https://my-super-cool-domain.com/pageC",
              "url": "https://my-super-cool-domain.com/pageF",
            },
            Object {
              "labels": "some img label",
              "links": Array [],
              "parent": "https://my-super-cool-domain.com/pageC",
              "url": "http://some_awesome_pictures.com",
            },
          ],
          "parent": "https://my-super-cool-domain.com/pageA",
          "url": "https://my-super-cool-domain.com/pageC",
        },
        Object {
          "labels": Array [
            "Page D",
          ],
          "links": Array [],
          "parent": "https://my-super-cool-domain.com/pageA",
          "url": "https://my-super-cool-domain.com/pageD",
        },
        Object {
          "labels": Array [
            "Case studies",
          ],
          "links": Array [],
          "parent": "https://my-super-cool-domain.com/pageA",
          "url": "https://wiprodigital.com/what-we-do#wdwork_cases",
        },
        Object {
          "labels": Array [
            "Case Study",
            "Delivering an exceptional mortgage customer experience for Allied Irish Bank",
          ],
          "links": Array [],
          "parent": "https://my-super-cool-domain.com/pageA",
          "url": "https://wiprodigital.com/cases/delivering-an-exceptional-mortgage-customer-experience-for-allied-irish-bank/",
        },
        Object {
          "labels": Array [
            "some other domain",
          ],
          "links": Array [],
          "parent": "https://my-super-cool-domain.com/pageA",
          "url": "https://some-other-domain",
        },
      ],
      "url": "https://my-super-cool-domain.com/pageA",
    },
  ],
}
`;

exports[`print sitemap with circular link 1`] = `
Object {
  "https://my-super-cool-domain.com/pageA": Array [
    Object {
      "links": Array [
        Object {
          "labels": Array [
            "Page B",
          ],
          "links": Array [],
          "parent": "https://my-super-cool-domain.com/pageA",
          "url": "https://my-super-cool-domain.com/pageB",
        },
      ],
      "url": "https://my-super-cool-domain.com/pageA",
    },
  ],
}
`;

exports[`traverse dummy page 1`] = `
Object {
  "http://some_awesome_pictures.com": Object {
    "labels": "some img label",
    "parent": "https://my-super-cool-domain.com/pageC",
    "url": "http://some_awesome_pictures.com",
  },
  "https://my-super-cool-domain.com/pageA": Object {
    "links": Array [
      Object {
        "labels": Array [
          "Page B",
        ],
        "url": "https://my-super-cool-domain.com/pageB",
      },
      Object {
        "labels": Array [
          "Page C",
        ],
        "url": "https://my-super-cool-domain.com/pageC",
      },
      Object {
        "labels": Array [
          "Page D",
        ],
        "url": "https://my-super-cool-domain.com/pageD",
      },
      Object {
        "labels": Array [
          "Case studies",
        ],
        "url": "https://wiprodigital.com/what-we-do#wdwork_cases",
      },
      Object {
        "labels": Array [
          "Case Study",
          "Delivering an exceptional mortgage customer experience for Allied Irish Bank",
        ],
        "url": "https://wiprodigital.com/cases/delivering-an-exceptional-mortgage-customer-experience-for-allied-irish-bank/",
      },
      Object {
        "labels": Array [
          "some other domain",
        ],
        "url": "https://some-other-domain",
      },
    ],
    "url": "https://my-super-cool-domain.com/pageA",
  },
  "https://my-super-cool-domain.com/pageB": Object {
    "labels": Array [
      "Page B",
    ],
    "links": Array [
      Object {
        "labels": Array [
          "Page C",
        ],
        "url": "https://my-super-cool-domain.com/pageC",
      },
      Object {
        "labels": Array [
          "Page A",
        ],
        "url": "https://my-super-cool-domain.com/pageA",
      },
      Object {
        "labels": Array [
          "Page E",
        ],
        "url": "https://my-super-cool-domain.com/pageE",
      },
    ],
    "parent": "https://my-super-cool-domain.com/pageA",
    "url": "https://my-super-cool-domain.com/pageB",
  },
  "https://my-super-cool-domain.com/pageC": Object {
    "labels": Array [
      "Page C",
    ],
    "links": Array [
      Object {
        "labels": Array [
          "Page F",
        ],
        "url": "https://my-super-cool-domain.com/pageF",
      },
      Object {
        "labels": "some img label",
        "url": "http://some_awesome_pictures.com",
      },
    ],
    "parent": "https://my-super-cool-domain.com/pageA",
    "url": "https://my-super-cool-domain.com/pageC",
  },
  "https://my-super-cool-domain.com/pageD": Object {
    "labels": Array [
      "Page D",
    ],
    "links": Array [],
    "parent": "https://my-super-cool-domain.com/pageA",
    "url": "https://my-super-cool-domain.com/pageD",
  },
  "https://my-super-cool-domain.com/pageE": Object {
    "labels": Array [
      "Page E",
    ],
    "links": Array [
      Object {
        "labels": Array [
          "Page G",
        ],
        "url": "https://my-super-cool-domain.com/pageG",
      },
    ],
    "parent": "https://my-super-cool-domain.com/pageB",
    "url": "https://my-super-cool-domain.com/pageE",
  },
  "https://my-super-cool-domain.com/pageF": Object {
    "labels": Array [
      "Page F",
    ],
    "links": Array [],
    "parent": "https://my-super-cool-domain.com/pageC",
    "url": "https://my-super-cool-domain.com/pageF",
  },
  "https://my-super-cool-domain.com/pageG": Object {
    "labels": Array [
      "Page G",
    ],
    "links": Array [
      Object {
        "labels": Array [
          "Page X",
        ],
        "url": "https://my-super-cool-domain.com/pageX",
      },
    ],
    "parent": "https://my-super-cool-domain.com/pageE",
    "url": "https://my-super-cool-domain.com/pageG",
  },
  "https://my-super-cool-domain.com/pageX": Object {
    "labels": Array [
      "Page X",
    ],
    "links": Array [],
    "parent": "https://my-super-cool-domain.com/pageG",
    "url": "https://my-super-cool-domain.com/pageX",
  },
  "https://some-other-domain": Object {
    "labels": Array [
      "some other domain",
    ],
    "parent": "https://my-super-cool-domain.com/pageA",
    "url": "https://some-other-domain",
  },
  "https://wiprodigital.com/cases/delivering-an-exceptional-mortgage-customer-experience-for-allied-irish-bank/": Object {
    "labels": Array [
      "Case Study",
      "Delivering an exceptional mortgage customer experience for Allied Irish Bank",
    ],
    "parent": "https://my-super-cool-domain.com/pageA",
    "url": "https://wiprodigital.com/cases/delivering-an-exceptional-mortgage-customer-experience-for-allied-irish-bank/",
  },
  "https://wiprodigital.com/what-we-do#wdwork_cases": Object {
    "labels": Array [
      "Case studies",
    ],
    "parent": "https://my-super-cool-domain.com/pageA",
    "url": "https://wiprodigital.com/what-we-do#wdwork_cases",
  },
}
`;
